--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
 			<version>${flink.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- 
+		<!--  -->
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.1.0</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-kafka_2.11</artifactId>
