--- a/pom.xml
+++ b/pom.xml
@@ -24,21 +24,21 @@
 			<version>${flink.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!--  -->
+		<!-- 
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.1.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-kafka_2.11</artifactId>
-			<version>1.7.1</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-table_2.11</artifactId>
-			<version>1.7.1</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -48,12 +48,12 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-avro</artifactId>
-			<version>1.7.1</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-json</artifactId>
-			<version>1.7.1</version>
+			<version>${flink.version}</version>
 		</dependency>
 		<dependency>
             <groupId>org.projectlombok</groupId>
