--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.43</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-cep_2.11</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
