--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>flink-cep_2.11</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-elasticsearch5_2.11</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
